crm-leads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-leads-service
spec:
  type: NodePort
  selector:
    app: crm-leads
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31070
