crm-leads/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-leads-ingress
spec:
  ingressClassName: traefik
  rules:
    # 1. Rota do Frontend (Acessado pelo navegador)
    - host: app.crm-leads.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crm-leads-frontend-svc
                port:
                  number: 3032

    # 2. Rota do Backend (Consumida pelo Frontend)
    - host: api.crm-leads.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crm-leads-backend-svc
                port:
                  number: 3031
